--- a/src/libs/SoloX.CodeQuality.Test/SoloX.CodeQuality.Test.csproj
+++ b/src/libs/SoloX.CodeQuality.Test/SoloX.CodeQuality.Test.csproj
@@ -7,7 +7,7 @@
 
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
-    <Version>0.13.0</Version>
+    <Version>1.0.0-rc.1</Version>
     <Authors>Xavier Solau</Authors>
     <Copyright>Copyright © 2019 Xavier Solau</Copyright>
     <PackageLicenseUrl>https://raw.githubusercontent.com/xaviersolau/CodeQuality/master/LICENSE</PackageLicenseUrl>
