--- a/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
+++ b/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../SharedProperties.props" />
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     
@@ -7,13 +9,6 @@
     
     <NoPackageAnalysis>true</NoPackageAnalysis>
     
-    <Version>1.0.2</Version>
-    <Authors>Xavier Solau</Authors>
-    <Copyright>Copyright © 2019 Xavier Solau</Copyright>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/xaviersolau/CodeQuality/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/xaviersolau/CodeQuality</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/xaviersolau/CodeQuality.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
     <PackageTags>code quality, analysis, coding style</PackageTags>
     <PackageReleaseNotes>- Setup coding style and analysis.</PackageReleaseNotes>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
