- Bump to version 2.0.0-alpha.1 - Update .Net 5.0 Analyzers - Use .editorconfig

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ bin
 obj
 
 src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.xml
+
+src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.xml
+
+src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.xml
