--- a/src/SharedProperties.props
+++ b/src/SharedProperties.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <Version>1.0.10</Version>
+    <Version>2.0.0-alpha.1</Version>
     <Authors>Xavier Solau</Authors>
     <Copyright>Copyright © 2019 Xavier Solau</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
