--- a/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
@@ -2,6 +2,10 @@
 
   <Import Project="../../SharedProperties.props" />
 
+  <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.props" />
+
+  <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 
@@ -20,35 +24,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-    <CodeAnalysisRuleSet />
-    <DocumentationFile>$(OutputPath)$(MSBuildProjectName).xml</DocumentationFile>
-    <NoWarn>$(NoWarn),1573,1591,1712</NoWarn>
-    <CodeAnalysisRuleSet>..\SoloX.CodeQuality.Test\SoloX.CodeQuality.Test.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <Features>$(Features);flow-analysis</Features>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="..\SoloX.CodeQuality.Test\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
 </Project>
