--- a/src/libs/SoloX.CodeQuality.Prod/resources/style.cs.ide2.editorconfig
+++ b/src/libs/SoloX.CodeQuality.Prod/resources/style.cs.ide2.editorconfig
@@ -26,7 +26,7 @@ dotnet_diagnostic.IDE0005.severity = error
 
 # IDE0073: File header
 dotnet_diagnostic.IDE0073.severity = error
-file_header_template = ----------------------------------------------------------------------\r\n<copyright file="{fileName}" company="SoloX Software">\r\nCopyright (c) SoloX Software. All rights reserved.\r\nLicensed under the MIT license. See LICENSE file in the project root for full license information.\r\n</copyright>\r\n----------------------------------------------------------------------
+file_header_template = ----------------------------------------------------------------------\n<copyright file="{fileName}" company="SoloX Software">\nCopyright (c) SoloX Software. All rights reserved.\nLicensed under the MIT license. See LICENSE file in the project root for full license information.\n</copyright>\n----------------------------------------------------------------------
 
 # IDE0044: Ajouter un modificateur readonly
 dotnet_diagnostic.IDE0044.severity = error
