--- a/src/SharedProperties.props
+++ b/src/SharedProperties.props
@@ -1,9 +1,9 @@
 <Project>
 
   <PropertyGroup>
-    <Version>2.0.0-alpha.2</Version>
+    <Version>2.0.0</Version>
     <Authors>Xavier Solau</Authors>
-    <Copyright>Copyright © 2019 Xavier Solau</Copyright>
+    <Copyright>Copyright © 2021 Xavier Solau</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/xaviersolau/CodeQuality</PackageProjectUrl>
     <RepositoryUrl>https://github.com/xaviersolau/CodeQuality.git</RepositoryUrl>
