- Bump to version 2.0.1 - Add C# Header file options - Update examples and Test.Helpers library files - Update READMY

--- a/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../SharedProperties.props" />
+
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.props" />
 
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
