--- a/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../../SharedProperties.props" />
+
   <Import Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.props" />
 
   <Import Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.targets" />
   
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    
+
+    <CodeQualityHeaderEnable>true</CodeQualityHeaderEnable>
+
     <!--<CodeQualityFieldsUseUnderscorStyle>true</CodeQualityFieldsUseUnderscorStyle>-->
 
   </PropertyGroup>
