--- a/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
+++ b/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
@@ -22,6 +22,8 @@
   <ItemGroup>
     <None Remove="resources\style.cs.compiler.ca.editorconfig" />
     <None Remove="resources\style.cs.compiler.cs.editorconfig" />
+    <None Remove="resources\style.cs.header.copyright.editorconfig" />
+    <None Remove="resources\style.cs.header.none.editorconfig" />
     <None Remove="resources\style.cs.ide1.editorconfig" />
     <None Remove="resources\style.cs.ide2.editorconfig" />
     <None Remove="resources\style.generated.editorconfig" />
@@ -35,6 +37,8 @@
     <Content Include="buildMultiTargeting\SoloX.CodeQuality.Prod.targets" PackagePath="buildMultiTargeting\" />
     <Content Include="build\SoloX.CodeQuality.Prod.props" PackagePath="build\" />
     <Content Include="build\SoloX.CodeQuality.Prod.targets" PackagePath="build\" />
+    <Content Include="resources\style.cs.header.copyright.editorconfig" PackagePath="resources\" />
+    <Content Include="resources\style.cs.header.none.editorconfig" PackagePath="resources\" />
     <Content Include="resources\style.cs.compiler.ca.editorconfig" PackagePath="resources\" />
     <Content Include="resources\style.web.editorconfig" PackagePath="resources\" />
     <Content Include="resources\style.razor.editorconfig" PackagePath="resources\" />
