--- a/src/SharedProperties.props
+++ b/src/SharedProperties.props
@@ -1,13 +1,19 @@
 <Project>
 
   <PropertyGroup>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <Authors>Xavier Solau</Authors>
     <Copyright>Copyright © 2021 Xavier Solau</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/xaviersolau/CodeQuality</PackageProjectUrl>
     <RepositoryUrl>https://github.com/xaviersolau/CodeQuality.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+
+    <CodeQualityHeaderCompanyName>$(Authors)</CodeQualityHeaderCompanyName>
+    <CodeQualityHeaderCopyright>$(Copyright)</CodeQualityHeaderCopyright>
+    <CodeQualityHeaderLicense>$(PackageLicenseExpression)</CodeQualityHeaderLicense>
+    <CodeQualityHeaderLicenseFile>LICENSE</CodeQualityHeaderLicenseFile>
+
   </PropertyGroup>
 
 </Project>
