- Add the CodeQualityUpdateGitIgnore option and update documentation. - Cleanup targets files

--- a/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
@@ -11,7 +11,7 @@
 
     <CodeQualityHeaderEnable>true</CodeQualityHeaderEnable>
 
-    <!--<CodeQualityFieldsUseUnderscorStyle>true</CodeQualityFieldsUseUnderscorStyle>-->
+    <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
 
   </PropertyGroup>
 
