--- a/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
@@ -8,6 +8,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
+    <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
+
   </PropertyGroup>
 
 </Project>
