--- a/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers/SoloX.CodeQuality.Test.Helpers.csproj
@@ -22,6 +22,9 @@
     <IsPackable>true</IsPackable>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
+
   </PropertyGroup>
 
   <ItemGroup>
