--- a/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
+++ b/src/libs/SoloX.CodeQuality.Prod/SoloX.CodeQuality.Prod.csproj
@@ -14,7 +14,7 @@
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Description>Setup coding style and analysis for production projects (using NetAlalyzers and CodeStyle).</Description>
     <IncludeBuildOutput>false</IncludeBuildOutput>
-
+    <DevelopmentDependency>true</DevelopmentDependency>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
   </PropertyGroup>
