--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -19,8 +19,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: Test
+      run: dotnet test ./src/tests/SoloX.CodeQuality.Test.Helpers.UTest --configuration Release --no-restore --no-build
     - name: Upload Packages
       uses: actions/upload-artifact@v2
-      with:	
-        name: 'NugetPackages'	
+      with:
+        name: 'NugetPackages'
         path: 'src/libs/**/*.nupkg'
