--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -19,3 +19,5 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: Test
+      run: dotnet test ./src/tests/SoloX.CodeQuality.Test.Helpers.UTest --configuration Release --no-restore --no-build
