--- a/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
@@ -1,25 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="../../SharedProperties.props" />
 
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.props" />
 
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
-
+  
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 
-    <PackageId>SoloX.CodeQuality.Test.Helpers</PackageId>
+    <PackageId>SoloX.CodeQuality.Test.Helpers.XUnit</PackageId>
 
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
     <PackageTags>code quality, test, integration</PackageTags>
-    <PackageReleaseNotes>
-      - Reworked HttpClient mock API.
-      - Removed XUnit dependency.
-    </PackageReleaseNotes>
+    <PackageReleaseNotes>- Add TestLogger.</PackageReleaseNotes>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <Description>Provides some helpers for integration test use.</Description>
+    <Description>Provides some helpers for integration test use with XUnit.</Description>
     <IncludeBuildOutput>true</IncludeBuildOutput>
 
     <IsPackable>true</IsPackable>
@@ -31,7 +28,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
-
+  
 </Project>
