- Bump to version 2.0.9 - Add TestLogger for NUnit framework - Add CS8603 (Possible null reference return) as error in Prod analyser. - Update ReadMe - Update Nuget packages

--- a/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
@@ -11,6 +11,9 @@
 
     <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
 
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+
   </PropertyGroup>
 
 </Project>
