--- a/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
@@ -13,6 +13,9 @@
 
     <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
 
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+
   </PropertyGroup>
 
 </Project>
