--- a/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers.XUnit/SoloX.CodeQuality.Test.Helpers.XUnit.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="../../SharedProperties.props" />
 
@@ -28,9 +28,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+    <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
   
 </Project>
