--- a/src/tests/SoloX.CodeQuality.Test.Helpers.XUnit.UTest/SoloX.CodeQuality.Test.Helpers.XUnit.UTest.csproj
+++ b/src/tests/SoloX.CodeQuality.Test.Helpers.XUnit.UTest/SoloX.CodeQuality.Test.Helpers.XUnit.UTest.csproj
@@ -8,12 +8,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.8.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -27,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\libs\SoloX.CodeQuality.Test.Helpers\SoloX.CodeQuality.Test.Helpers.csproj" />
+    <ProjectReference Include="..\..\libs\SoloX.CodeQuality.Test.Helpers.XUnit\SoloX.CodeQuality.Test.Helpers.XUnit.csproj" />
   </ItemGroup>
 
 </Project>
