--- a/src/libs/SoloX.CodeQuality.Test.Helpers.NUnit/SoloX.CodeQuality.Test.Helpers.NUnit.csproj
+++ b/src/libs/SoloX.CodeQuality.Test.Helpers.NUnit/SoloX.CodeQuality.Test.Helpers.NUnit.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 
-    <PackageId>SoloX.CodeQuality.Test.Helpers.XUnit</PackageId>
+    <PackageId>SoloX.CodeQuality.Test.Helpers.NUnit</PackageId>
 
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
