--- a/src/libs/SoloX.CodeQuality.Test/resources/style.generated.editorconfig
+++ b/src/libs/SoloX.CodeQuality.Test/resources/style.generated.editorconfig
@@ -1,6 +1,26 @@
 ﻿
 [*.{generated.cs,g.cs}]
+[!*.razor.g.cs]
+
 generated_code = true
+
+dotnet_analyzer_diagnostic.severity = error
+
+dotnet_analyzer_diagnostic.category-Style.severity = none
+dotnet_analyzer_diagnostic.category-Design.severity = none
+dotnet_analyzer_diagnostic.category-Documentation.severity = none
+dotnet_analyzer_diagnostic.category-Globalization.severity = none
+dotnet_analyzer_diagnostic.category-Interoperability.severity = none
+dotnet_analyzer_diagnostic.category-Maintainability.severity = none
+dotnet_analyzer_diagnostic.category-Naming.severity = none
+dotnet_analyzer_diagnostic.category-Performance.severity = none
+dotnet_analyzer_diagnostic.category-SingleFile.severity = none
+dotnet_analyzer_diagnostic.category-Reliability.severity = none
+dotnet_analyzer_diagnostic.category-Security.severity = none
+dotnet_analyzer_diagnostic.category-Style.severity = none
+dotnet_analyzer_diagnostic.category-Usage.severity = none
+dotnet_analyzer_diagnostic.category-CodeQuality.severity = none
+
 
 [*.razor.g.cs]
 
