--- a/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
@@ -16,4 +16,8 @@
 
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
