--- a/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
@@ -16,6 +16,12 @@
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
 
+    <CodeQualityLoggerUseDisabled>true</CodeQualityLoggerUseDisabled>
+
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 
 </Project>
