--- a/src/libs/SoloX.CodeQuality.Test/resources/style.cs.compiler.ca.editorconfig
+++ b/src/libs/SoloX.CodeQuality.Test/resources/style.cs.compiler.ca.editorconfig
@@ -11,7 +11,7 @@ dotnet_diagnostic.CA1001.severity = error
 dotnet_diagnostic.CA1032.severity = error
 
 # CA1506: class coupling
-dotnet_diagnostic.CA1506.severity = warning
+dotnet_diagnostic.CA1506.severity = none
 
 # CA1507: Utiliser nameof pour exprimer les noms de symboles
 dotnet_diagnostic.CA1507.severity = error
