--- a/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Prod.Example/SoloX.CodeQuality.Prod.Example.csproj
@@ -7,7 +7,7 @@
   <Import Project="../../libs/SoloX.CodeQuality.Prod/build/SoloX.CodeQuality.Prod.targets" />
   
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <CodeQualityHeaderEnable>true</CodeQualityHeaderEnable>
 
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
