--- a/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
+++ b/src/examples/SoloX.CodeQuality.Test.Example/SoloX.CodeQuality.Test.Example.csproj
@@ -7,7 +7,7 @@
   <Import Project="../../libs/SoloX.CodeQuality.Test/build/SoloX.CodeQuality.Test.targets" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <CodeQualityUpdateGitIgnore>true</CodeQualityUpdateGitIgnore>
 
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
