--- a/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
+++ b/src/libs/SoloX.CodeQuality.Playwright/SoloX.CodeQuality.Playwright.csproj
@@ -10,6 +10,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <IsPackable>true</IsPackable>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
   </PropertyGroup>
 
   <ItemGroup>
