--- a/src/libs/SoloX.CodeQuality.WebHost/SoloX.CodeQuality.WebHost.csproj
+++ b/src/libs/SoloX.CodeQuality.WebHost/SoloX.CodeQuality.WebHost.csproj
@@ -10,6 +10,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <IsPackable>true</IsPackable>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
   </PropertyGroup>
 
 </Project>
