--- a/src/libs/SoloX.CodeQuality.WebHost/SoloX.CodeQuality.WebHost.csproj
+++ b/src/libs/SoloX.CodeQuality.WebHost/SoloX.CodeQuality.WebHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="../../SharedProperties.props" />
 
@@ -14,7 +14,16 @@
     <IsPackable>true</IsPackable>
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="$(OutDir)\SoloX.CodeQuality.WebHost.deps.json" Link="Resources\SoloX.CodeQuality.WebHost.deps.json" Pack="true" PackagePath="resources\" Visible="False" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="buildTransitive\SoloX.CodeQuality.WebHost.targets" PackagePath="buildTransitive\" />
+    <Content Include="build\SoloX.CodeQuality.WebHost.targets" PackagePath="build\" />
+  </ItemGroup>
+
 
 </Project>
